# Vector_Atlas

./: .gitignore  CMakeLists.txt  README.MD  main.cpp  notes.md
extraction/: opendoc.cpp  opendoc.hpp  text.cpp  text.hpp
helpers/: open_result.hpp  opendoc.cpp  opendoc.hpp
scratch_test/: scratch.cpp
server/: routes.cpp  server.cpp
